# map_gui

./: .gitignore
src/GUI/: index.html  main.js  package.json  server.js
src/GUI/css/: index.css
src/GUI/html/: index.html
src/GUI/js/: eventemitter2.js  ros3d.js  roslib.js  ssh.js
src/Map2/: Map1.yaml  estMap.pgm  stMap.pgm  testMap.pgm
src/data/: cona.lic
src/data/CoNA/: .config.json.swp  Map1.pgm  config.json  gui_v2.json  scenario.json
src/data/CoNA/Map1/: Map1.pgm  Map1.yaml  map_file.txt
src/data/CoNA/Map10/: Map1.pgm  Map1.yaml  map_file.txt  save_test.pgm
src/data/CoNA/Map1_bk1/: Map1.pgm  Map1.yaml  map_file.txt
src/data/CoNA/Map1_bk2/: Map1.pgm  Map1.yaml  map_file.txt
src/data/CoNA/Map2/: Map1.pgm  Map1.yaml  map_file.txt
src/data/CoNA/Map3/: Map1.pgm  Map1.yaml  map_file.txt
src/data/CoNA/Map3/a/: Map1.yaml.yaml
src/data/CoNA/Map4/: qwer.pgm  qwer.yaml
src/map/: Map1.pgm  Map1.yaml  map_file.txt
src/map_modify/: CMakeLists.txt  package.xml
src/map_modify/include/map_modify/: map_modify.hpp
src/map_modify/launch/: map_editor.launch
src/map_modify/src/: map_modify.cpp
src/map_origin/: map_file.txt
